# secret-friend-generator-api

./: .editorconfig  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  conftest.py  pyproject.toml
.claude/: metadata.json
.claude/hooks/.logs/: hook-log.jsonl
.claude/rules/: clean-architecture-enforcement.md  development-rules.md
.claude/scripts/: resolve_env.py  scan_skills.py  win_compat.py
.claude/skills/common/: api_key_helper.py  api_key_rotator.py
.github/: dependabot.yml
.github/workflows/: ci.yml  code-review.yml  publish-image.yml
alembic/: env.py
alembic/versions/: 34a8d5299c7e_adds_upgraded_at.py  41a0fefb2dc6_create_symphony_tables.py  42b1beebae2e_create_users.py  7d26527b923e_adds_unique_true_to_link_url.py  821767a0b48d_initial_migration.py  898fc8180451_adds_upgraded_at.py  8a3f1c2d9e10_symphony_orchestration_tables.py  9962a7310e25_removes_password_column.py  9b2c8e4f0a11_create_tenancy_organizations.py  ae6617610d2a_update_statusenum.py  cf4bbc3325c5_adds_upgraded_at.py
apps/web/: .gitignore  package-lock.json  package.json  playwright.config.ts
apps/web/e2e/: README.md  global-setup.ts
apps/web/src/: routes.tsx
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  how-to-add-aggregate.md  how-to-add-bounded-context.md  signals-architecture.md
docs/adr/: 0000-template.md  0001-clean-architecture-stance.md  README.md
docs/superpowers/plans/: 2026-04-18-domain-driven-restructuring.md
docs/superpowers/specs/: 2026-04-18-domain-driven-restructuring-design.md  2026-05-07-run-live-stream-design.md
plans/260507-2339-run-live-stream/: plan.md
plans/reports/: researcher-260418-1550-python-ddd-fastapi-patterns.md
scripts/: verify-arch.sh
src/: app_main.py  main.py
src/adapters/events/: in_memory_publisher.py
src/api/: api_middleware.py  api_router.py  dependencies.py  error_schemas.py  middleware.py  router.py
src/api/agents/: agents_dependencies.py  agents_health_route.py  agents_invoke_route.py  agents_resume_route.py  agents_routes.py  agents_stream_route.py  agents_threads_route.py  dependencies.py  health_route.py  invoke_route.py  message_utils.py  resume_route.py  routes.py  schemas.py  stream_route.py  threads_route.py
src/api/group/: group_routes.py  routes.py  schemas.py
src/api/participant/: participant_routes.py  routes.py  schemas.py
src/api/secret_friend/: routes.py  schemas.py  secret_friend_routes.py
src/app/: api.py  config.py  enum.py  exceptions.py  main.py  scheduler.py
src/app/common/: managers.py
src/app/database/: __init__.py  session.py
src/app/group/: model.py  repository.py  schema.py  service.py  views.py
src/app/participant/: model.py  repository.py  schema.py  service.py  views.py
src/app/secret_friend/: model.py  repository.py  schema.py  service.py  views.py
src/contexts/identity/: __init__.py
src/contexts/symphony/: __init__.py
src/contexts/tenancy/: __init__.py
src/domain/: lifecycle.py
src/domain/_shared/: aggregate_root.py  event_publisher.py
src/domain/group/: entities.py  group_model.py  group_repository.py  group_schemas.py  group_service.py  handlers.py  model.py  notifications.py  repositories.py  repository.py  schemas.py  service.py  signals.py  value_objects.py
src/domain/participant/: entities.py  handlers.py  model.py  notifications.py  participant_model.py  participant_repository.py  participant_schemas.py  participant_service.py  repositories.py  repository.py  schemas.py  service.py  signals.py  value_objects.py
src/domain/secret_friend/: entities.py  handlers.py  model.py  notifications.py  repositories.py  repository.py  schemas.py  secret_friend_repository.py  secret_friend_service.py  service.py  signals.py
src/domain/shared/: __init__.py  database_session.py  database_transaction.py  lifecycle_handlers.py  signals.py  task_backend.py  unit_of_work.py  validators.py
src/domain/user/: entity.py  events.py  repository.py
src/infrastructure/: config.py  database.py
src/infrastructure/containers/: __init__.py  core.py  identity.py  root.py  symphony.py  tenancy.py  user.py
src/infrastructure/database/: __init__.py  session.py
src/infrastructure/messaging/: __init__.py
src/infrastructure/persistence/: __init__.py  session.py  transaction.py  unit_of_work.py
src/infrastructure/repositories/: __init__.py  group_repository.py  participant_repository.py  secret_friend_repository.py
src/infrastructure/tasks/: __init__.py  app.py  backend.py  notifications.py
src/shared/: aggregate_root.py  app_config.py  config.py  event_publisher.py  events.py  exceptions.py  hashing.py  instance_manager.py  scheduler_config.py  signals.py  task_backend.py
src/shared/agentic/: __init__.py  agent_runner.py  gate.py  retry.py  workspace.py
src/shared/utils/: hashing_utils.py
src/use_cases/user/: create.py  delete.py  dto.py  get.py  list.py  update.py
tests/: conftest.py
tests/api/: test_api_router.py  test_middleware.py
tests/api/agents/: test_agents_dependencies.py  test_agents_health_route.py  test_agents_integration.py  test_agents_invoke_route.py  test_agents_resume_route.py  test_agents_routes.py  test_agents_schemas.py  test_agents_stream_route.py  test_agents_threads_route.py  test_dependencies.py  test_health_route.py  test_integration.py  test_invoke_route.py  test_resume_route.py  test_routes.py  test_schemas.py  test_stream_route.py  test_threads_route.py
tests/api/group/: test_group_routes.py  test_routes.py  test_schemas.py
tests/api/participant/: test_routes.py
tests/api/secret_friend/: test_routes.py  test_secret_friend_routes.py
tests/architecture/: test_dependency_rule.py  test_domain_events_frozen.py  test_no_inline_constants.py  test_repository_per_aggregate.py  test_rich_domain_models.py  test_use_case_request_response.py  test_use_case_responses.py
tests/domain/group/: test_handlers.py  (+7 more)
tests/infrastructure/: test_celery_app_config.py  test_celery_backend.py  test_database_transaction.py
tests/shared/: test_isolated_decorator.py  test_task_backend.py
(+577 files in other folders)
