[tool.ruff]
exclude = ["env", "migrations"]
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "W"]
fixable = ["F", "E"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.poetry]
name = "app"
version = "0.1.0"
description = "Python AI Starter — Clean Architecture"
authors = ["João Netto <joaonettopb@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.0"
uvicorn = ">=0.22.0"
SQLAlchemy = ">=2.0.13"
gunicorn = ">=22.0.0"
python-dotenv = ">=1.0.0"
alembic = ">=1.11.1"
pydantic = {version = ">=2.10.0", extras = ["email"]}
pydantic-settings = ">=2.0.0"
httpx = ">=0.24.1"
asyncpg = ">=0.29"
dependency-injector = ">=4.41"

[tool.poetry.dev-dependencies]
pytest = ">=7.4.0"
ruff = ">=0.1.0"
pytest-asyncio = ">=0.23"
mypy = ">=1.10"
aiosqlite = ">=0.19"
import-linter = ">=2.0"

[tool.poetry.scripts]
start = "bin.run:start"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
