[tool.ruff]
exclude = ["env", "migrations"]
line-length = 88

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "B",    # flake8-bugbear (likely-bug patterns)
    "TID",  # flake8-tidy-imports (ban relative imports)
    "UP",   # pyupgrade (modern Python idioms)
    "SIM",  # flake8-simplify (refactor hints)
]
fixable = ["F", "E", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
# B008: Depends()/Query() as default args is the FastAPI + dependency-injector idiom;
# the call is intentionally evaluated once at import time to build the DI graph.
"src/adapters/http/user/deps.py" = ["B008"]
"src/contexts/identity/adapters/http/user/deps.py" = ["B008"]
"src/contexts/symphony/adapters/http/use_case_deps.py" = ["B008"]
"src/contexts/symphony/adapters/http/run/deps.py" = ["B008"]
"src/contexts/symphony/adapters/http/run/orchestration_dep.py" = ["B008"]
"src/contexts/symphony/adapters/http/run/dispatch_dep.py" = ["B008"]
"src/contexts/symphony/adapters/http/spec/deps.py" = ["B008"]
"src/contexts/symphony/adapters/http/plan/deps.py" = ["B008"]
"src/contexts/symphony/adapters/http/backlog/deps.py" = ["B008"]
"src/contexts/symphony/adapters/http/spec/routes/list_for_run.py" = ["B008"]
"src/contexts/symphony/adapters/http/plan/routes/list_for_run.py" = ["B008"]
"src/contexts/tenancy/adapters/http/organization/deps.py" = ["B008"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.poetry]
name = "app"
version = "0.1.0"
description = "Python AI Starter — Clean Architecture"
authors = ["João Netto <joaonettopb@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.0"
uvicorn = ">=0.22.0"
SQLAlchemy = ">=2.0.13"
gunicorn = ">=22.0.0"
python-dotenv = ">=1.0.0"
alembic = ">=1.11.1"
pydantic = {version = ">=2.10.0", extras = ["email"]}
pydantic-settings = ">=2.0.0"
httpx = ">=0.24.1"
asyncpg = ">=0.29"
dependency-injector = ">=4.41"
pyyaml = "^6.0.3"

[tool.poetry.dev-dependencies]
pytest = ">=7.4.0"
ruff = ">=0.1.0"
pytest-asyncio = ">=0.23"
mypy = ">=1.10"
aiosqlite = ">=0.19"
import-linter = ">=2.0"

[tool.poetry.scripts]
start = "bin.run:start"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^7.1.0"
types-pyyaml = "^6.0.12.20260408"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true
concurrency = ["thread", "greenlet"]
omit = [
    "src/main.py",
    "src/infrastructure/containers/*",
    "src/*/adapters/http/*/router.py",
    "src/*/adapters/http/*/__init__.py",
    "src/*/__init__.py",
    # Protocol files — type contracts, no runtime code (only imported under TYPE_CHECKING)
    "src/contexts/*/domain/*/repository.py",
    "src/contexts/*/domain/*/adapter.py",
    "src/contexts/*/domain/unit_of_work.py",
    "src/shared/event_publisher.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
